# django-mini-project

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_rename_user_account_user_id.py  0003_rename_user_id_account_user.py  0004_alter_account_account_number.py
apps/common/: models.py
apps/transaction_history/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/transaction_history/migrations/: 0001_initial.py  0002_alter_transactionhistory_post_transaction_amount_and_more.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py  0003_alter_user_options.py
config/settings/: __init__.py  base.py  development.py  production.py
config/urls/: __init__.py  development.py  production.py  urls.py
users/: admin.py
users/migrations/: 0001_initial.py
