[tool.poetry]
name = "django-mini-project"
version = "0.1.0"
description = "team3"
authors = ["hyo <umdoongs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
django = ">=5.1.4"
djangorestframework = ">=3.15.2"
postgres = ">=4.0"
psycopg2-binary = ">=2.9.10"
django-environ = ">=0.11.2"
djangorestframework-simplejwt = ">=5.3.1"


[tool.poetry.group.dev.dependencies]
drf-spectacular = ">=0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
